# simd-sketch

./: CHANGELOG.md  Cargo.toml  README.md  justfile
examples/: dist.rs  random.rs
py/: correlation.py  stats
src/: classify.rs  intrinsics.rs  lib.rs  main.rs
